add a first section in main
the firt section of the main is a h2 and table

--- a/index.html
+++ b/index.html
@@ -23,7 +23,62 @@
     <!--fine di header-->
 
     <main>
+        <section>
+            <h2>Le mie spese</h2>
+
+            <table>
+
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <!--thead-->
+
+                <tbody>
+
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120 €</td>
+                    </tr>
+
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120 €</td>
+                    </tr>
+
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120 €</td>
+                    </tr>
+
+                </tbody>
+                <!--tbody-->
+
+                <tfoot>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360 €</td>
+                    </tr>
+                </tfoot>
+                <!--tfood-->
+
+            </table>
+            <!--fine table-->
+
+
+        </section>
+        <!--section Le mie spese -->
+
+        <hr>
 
     </main>
+
 </body>
 </html>
