--- a/index.html
+++ b/index.html
@@ -78,6 +78,22 @@
 
         <hr>
 
+        <section>
+
+            <h3>Cose da fare</h3>
+
+            <ul>
+                <li>Visitare la Tower of London &#x2718; </li>
+                <li>Visitare greenwich &#x2713; </li>
+                <li>Ascoltare un artista di strada a Covent Garden &#x2713;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &#x2718; </li>
+            </ul>
+
+        </section>
+        <!--section Cose da fare-->
+
+        <hr>
+
     </main>
 
 </body>
