--- a/index.html
+++ b/index.html
@@ -94,6 +94,61 @@
 
         <hr>
 
+        <section>
+
+            <h3>Info Utili: </h3>
+
+            <ol>
+                <li>
+                    Numeri utili di emergenza
+                    <ul>
+                        <li>
+                            <strong> 999 -</strong> 
+                            Emergenza
+                        </li>
+                        <li>
+                            <strong>101 -</strong> 
+                            Numero polizia
+                        </li>
+                        <li>
+                            <strong>111 -</strong> 
+                            Numero assistenza medica</li>
+                    </ul>
+                </li>
+                
+                <li>
+                    Hotel
+                    <ul>
+                        <li>
+                            <strong>Nome hotel:</strong>
+                            Buckingham Palace
+                        </li>
+                        <li>
+                            <strong>Indirizzo hotel:</strong>
+                            Westminster, London SW1A 1AA, Regno Unito
+                        </li>
+                    </ul>
+                </li>
+                
+                <li>
+                    Aereo
+                    <ul>
+                        <li>
+                            <strong>Volo di Andata:</strong>
+                            YI134X, ore 9.30 da Milano Malpensa
+                        </li>
+                        <li>
+                            <strong>Volo di Ritorno:</strong>
+                            YI136X, ore 18.30 da London Heathrow
+                        </li>
+                    </ul>
+                </li>
+
+            </ol>
+
+        </section>
+        <!--section Info utili-->
+
     </main>
 
 </body>
