--- a/index.html
+++ b/index.html
@@ -100,19 +100,17 @@
 
             <ol> 
                 <li> <!--lista numero 1-->
-                    Numeri utili di emergenza
+                    Numeri utili di emergenza 
                     <ul>
                         <li>
-                            <strong> 999 -</strong> 
-                            Emergenza
+                            <strong> 999 -</strong> Emergenza
                         </li>
                         <li>
-                            <strong>101 -</strong> 
-                            Numero polizia
+                            <strong>101 -</strong> Numero polizia
                         </li>
                         <li>
-                            <strong>111 -</strong> 
-                            Numero assistenza medica</li>
+                            <strong>111 -</strong> Numero assistenza medica
+                        </li>
                     </ul>
                 </li>
                 
@@ -120,12 +118,10 @@
                     Hotel
                     <ul>
                         <li>
-                            <strong>Nome hotel:</strong>
-                            Buckingham Palace
+                            <strong>Nome hotel:</strong> Buckingham Palace
                         </li>
                         <li>
-                            <strong>Indirizzo hotel:</strong>
-                            Westminster, London SW1A 1AA, Regno Unito
+                            <strong>Indirizzo hotel:</strong> Westminster, London SW1A 1AA, Regno Unito
                         </li>
                     </ul>
                 </li>
@@ -134,12 +130,10 @@
                     Aereo
                     <ul>
                         <li>
-                            <strong>Volo di Andata:</strong>
-                            YI134X, ore 9.30 da Milano Malpensa
+                            <strong>Volo di Andata:</strong> YI134X, ore 9.30 da Milano Malpensa
                         </li>
                         <li>
-                            <strong>Volo di Ritorno:</strong>
-                            YI136X, ore 18.30 da London Heathrow
+                            <strong>Volo di Ritorno:</strong> YI136X, ore 18.30 da London Heathrow
                         </li>
                     </ul>
                 </li>
